[gd_scene load_steps=47 format=3 uid="uid://bl2iprvunslcr"]

[ext_resource type="Script" uid="uid://tjarkh63gpjn" path="res://game_scenes/game_screen/ParallaxLayer.gd" id="1_dnhea"]
[ext_resource type="Script" uid="uid://iex1dqg6a3i" path="res://game_scenes/game_screen/timeline.gd" id="1_qm1ha"]
[ext_resource type="Texture2D" uid="uid://cbxy5iqvcmnil" path="res://images/UI_images/progress_bar/underwater/Left Seaweed.png" id="2_8d8la"]
[ext_resource type="Texture2D" uid="uid://sqrbufposvrb" path="res://images/UI_images/progress_bar/underwater/Underwater Progress Bar.png" id="2_aeoal"]
[ext_resource type="Script" uid="uid://3hl2rl62be5o" path="res://game_scenes/game_screen/ParallaxBackground.gd" id="2_nyj2y"]
[ext_resource type="Texture2D" uid="uid://bp28eq7ykh7bp" path="res://images/UI_images/progress_bar/underwater/Mid Seaweed.png" id="3_yihho"]
[ext_resource type="Texture2D" uid="uid://cxtfqcx7g0h0j" path="res://images/UI_images/progress_bar/underwater/Right Seaweed.png" id="4_ar3ec"]
[ext_resource type="Script" uid="uid://cw3innscx66o1" path="res://game_scenes/game_screen/ParallaxLayer2.gd" id="5_5y0d6"]
[ext_resource type="Theme" uid="uid://b2ufqqc6nun3o" path="res://pixel font/mid_font_theme.tres" id="7_unjkg"]
[ext_resource type="Texture2D" uid="uid://dn1wao6cxa3kt" path="res://images/UI_images/progress_bar/underwater/Submarine.png" id="11_ksuuw"]
[ext_resource type="Texture2D" uid="uid://c6uuio6befmmi" path="res://images/UI_images/progress_bar/air/airplane.png" id="12_y2538"]
[ext_resource type="Texture2D" uid="uid://do6j80xtbrp1b" path="res://images/UI_images/progress_bar/land/Tanks-Stationary.png" id="14_ns7pl"]
[ext_resource type="FontFile" uid="uid://duv0rbeynolx2" path="res://pixel font/kongtext.ttf" id="14_pqgl6"]
[ext_resource type="Texture2D" uid="uid://bnvpryfb0jwdm" path="res://images/UI_images/progress_bar/land/Tanks-Moving.png" id="14_vxjg4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4vnv"]
atlas = ExtResource("2_8d8la")
region = Rect2(0, 0, 15, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvrdc"]
atlas = ExtResource("3_yihho")
region = Rect2(0, 0, 15, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxlwp"]
atlas = ExtResource("4_ar3ec")
region = Rect2(0, 0, 15, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_amj5b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4vnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvrdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxlwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvrdc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo57"]
atlas = ExtResource("11_ksuuw")
region = Rect2(70, 0, 35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_beyqj"]
atlas = ExtResource("11_ksuuw")
region = Rect2(0, 0, 35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dont"]
atlas = ExtResource("11_ksuuw")
region = Rect2(35, 25, 35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_omq5c"]
atlas = ExtResource("11_ksuuw")
region = Rect2(105, 25, 35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl3v6"]
atlas = ExtResource("11_ksuuw")
region = Rect2(70, 50, 35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg7js"]
atlas = ExtResource("11_ksuuw")
region = Rect2(0, 50, 35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_78nx4"]
atlas = ExtResource("11_ksuuw")
region = Rect2(35, 75, 35, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0u6i"]
atlas = ExtResource("11_ksuuw")
region = Rect2(105, 75, 35, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_ki2sm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beyqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dont")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omq5c")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl3v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg7js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78nx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0u6i")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3406i"]
atlas = ExtResource("12_y2538")
region = Rect2(0, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_go4hr"]
atlas = ExtResource("12_y2538")
region = Rect2(40, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tjlp"]
atlas = ExtResource("12_y2538")
region = Rect2(80, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg1vi"]
atlas = ExtResource("12_y2538")
region = Rect2(120, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_of4al"]
atlas = ExtResource("12_y2538")
region = Rect2(0, 25, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0dfq"]
atlas = ExtResource("12_y2538")
region = Rect2(40, 25, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p0tv"]
atlas = ExtResource("12_y2538")
region = Rect2(80, 25, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vyji"]
atlas = ExtResource("12_y2538")
region = Rect2(120, 25, 40, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_w7k1s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3406i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go4hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tjlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg1vi")
}],
"loop": true,
"name": &"hover",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_of4al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0dfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p0tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vyji")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_m354k"]
atlas = ExtResource("14_ns7pl")
region = Rect2(0, 0, 25, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lrce"]
atlas = ExtResource("14_ns7pl")
region = Rect2(25, 0, 25, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_shuun"]
atlas = ExtResource("14_ns7pl")
region = Rect2(0, 40, 25, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi2ok"]
atlas = ExtResource("14_ns7pl")
region = Rect2(25, 40, 25, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_er662"]
atlas = ExtResource("14_vxjg4")
region = Rect2(0, 0, 25, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_n84gp"]
atlas = ExtResource("14_vxjg4")
region = Rect2(25, 0, 25, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gla3u"]
atlas = ExtResource("14_vxjg4")
region = Rect2(0, 40, 25, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydesg"]
atlas = ExtResource("14_vxjg4")
region = Rect2(25, 40, 25, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_j0nb0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m354k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lrce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shuun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi2ok")
}],
"loop": true,
"name": &"hover",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_er662")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n84gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gla3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydesg")
}],
"loop": true,
"name": &"move",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljkcy"]
size = Vector2(54.5, 126)

[node name="timeline" type="Node2D"]
script = ExtResource("1_qm1ha")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(0, 30)
transform = Transform2D(1, 0, 0, 1, 0, 30)
script = ExtResource("2_nyj2y")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1149, 0)
script = ExtResource("1_dnhea")

[node name="background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(575, 125)
scale = Vector2(1.1495, 1.15)
texture = ExtResource("2_aeoal")
region_rect = Rect2(0, 0, 50, 10)

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
script = ExtResource("5_5y0d6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer2"]
visible = false
position = Vector2(618, 133)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_amj5b")
autoplay = "default"
frame_progress = 0.402242

[node name="sub" type="AnimatedSprite2D" parent="."]
position = Vector2(419, 138)
scale = Vector2(4.5, 4.5)
sprite_frames = SubResource("SpriteFrames_ki2sm")
animation = &"move"
autoplay = "hover"
frame_progress = 0.320669

[node name="plane" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0.439216, 0.517647, 0.329412, 1)
position = Vector2(407, 141)
scale = Vector2(4.5, 4.5)
sprite_frames = SubResource("SpriteFrames_w7k1s")
animation = &"move"
autoplay = "hover"
frame_progress = 0.774695

[node name="Label" type="Label" parent="."]
offset_left = 32.0
offset_top = 8.0
offset_right = 157.0
offset_bottom = 48.0
theme = ExtResource("7_unjkg")
theme_override_font_sizes/font_size = 22
text = "edfdf"
vertical_alignment = 1

[node name="tank" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(411, 38)
scale = Vector2(7.22, 7.22)
sprite_frames = SubResource("SpriteFrames_j0nb0")
animation = &"move"
autoplay = "hover"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(523, 150)
shape = SubResource("RectangleShape2D_ljkcy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIHeader" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="timeline_title" type="Label" parent="CanvasLayer/UIHeader"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 960.0
offset_top = 8.0
offset_right = 1085.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("14_pqgl6")
theme_override_font_sizes/font_size = 22
text = "Right"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainerCurrent" type="PanelContainer" parent="CanvasLayer"]
visible = false
z_as_relative = false
offset_left = 501.0
offset_top = 152.0
offset_right = 1123.0
offset_bottom = 198.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainerCurrent"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/PanelContainerCurrent/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("7_unjkg")
text = "text"
vertical_alignment = 1
autowrap_mode = 3

[node name="StartArea2D" type="Area2D" parent="."]
position = Vector2(-368, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea2D"]
position = Vector2(492.75, 152)
shape = SubResource("RectangleShape2D_ljkcy")

[node name="StartCanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainerCurrent" type="PanelContainer" parent="StartCanvasLayer"]
visible = false
z_as_relative = false
offset_left = 120.0
offset_top = 152.0
offset_right = 742.0
offset_bottom = 198.0

[node name="MarginContainer" type="MarginContainer" parent="StartCanvasLayer/PanelContainerCurrent"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="StartCanvasLayer/PanelContainerCurrent/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("7_unjkg")
text = "start"
vertical_alignment = 1
autowrap_mode = 3

[node name="PanelContainerStart" type="PanelContainer" parent="StartCanvasLayer"]
visible = false
z_as_relative = false
offset_left = 120.0
offset_top = 112.0
offset_right = 264.0
offset_bottom = 187.0

[node name="MarginContainer" type="MarginContainer" parent="StartCanvasLayer/PanelContainerStart"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="StartCanvasLayer/PanelContainerStart/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("7_unjkg")
text = "start"
vertical_alignment = 1

[node name="EndArea2D" type="Area2D" parent="."]
position = Vector2(440, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea2D"]
position = Vector2(552, 152)
shape = SubResource("RectangleShape2D_ljkcy")

[node name="EndCanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainerCurrent" type="PanelContainer" parent="EndCanvasLayer"]
visible = false
z_as_relative = false
offset_left = 408.0
offset_top = 152.0
offset_right = 1030.0
offset_bottom = 198.0

[node name="MarginContainer" type="MarginContainer" parent="EndCanvasLayer/PanelContainerCurrent"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="EndCanvasLayer/PanelContainerCurrent/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("7_unjkg")
text = "Finish"
vertical_alignment = 1
autowrap_mode = 3

[node name="PanelContainerEnd" type="PanelContainer" parent="EndCanvasLayer"]
visible = false
z_as_relative = false
offset_left = 848.0
offset_top = 112.0
offset_right = 992.0
offset_bottom = 187.0

[node name="MarginContainer" type="MarginContainer" parent="EndCanvasLayer/PanelContainerEnd"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="EndCanvasLayer/PanelContainerEnd/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("7_unjkg")
text = "Finish"
vertical_alignment = 1

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="StartArea2D" to="." method="_on_start_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="StartArea2D" to="." method="_on_start_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="EndArea2D" to="." method="_on_end_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="EndArea2D" to="." method="_on_end_area_2d_mouse_exited"]
